--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  height: 100vh;
+  width: 100vw;
 }
 
 .App-logo {
@@ -36,3 +38,29 @@
     transform: rotate(360deg);
   }
 }
+
+.horizontal-container{
+  display: flex;
+  flex-direction: row;
+  height: 90%;
+  width: 100vw;
+
+}
+.vertical-container{
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+
+}
+/* .mainpage {
+  background-color: aqua;
+} */
+
+/* .page{
+  height: 100vh;
+}
+
+.main-row{
+  height: 100vh;
+} */
