--- a/src/components/mainpage/mainpage.css
+++ b/src/components/mainpage/mainpage.css
@@ -1,7 +1,7 @@
 .mainpage{
     min-height: 100%;
     width: 100%;
-    background-color: #BBBBBB;
+    background-color: white;
     border-radius: 0px;
     flex-direction: column;
     justify-content: space-around;
