--- a/src/components/menubar/menubar.css
+++ b/src/components/menubar/menubar.css
@@ -6,26 +6,54 @@
     justify-content: space-between;
     align-content: center;
     padding-right: 2%;
+
+    background-image: -webkit-linear-gradient(top, #9c3e78, #6574d6);
+    border-bottom: #6574d6;
+    border-style: solid;
+    border-width: 0 0 thin;
+    
+
 }
 
 .links{
     width:40%;
     /* padding-top: 1%; */
-    padding-bottom: 1%;
+    /* padding-bottom: 1%; */
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    
 
 
 }
 
 
-.betterLink{
+/* .betterLink{
     text-decoration: none;
     text-align: center !important;
     vertical-align: middle;
-    /* height:50%; */
     font-weight: 700;
     font-size: 24px;
+} */
+
+.betterLink{
+    text-decoration: none;
 }
+
+.link-text{
+    display: flex;
+    text-decoration: none;
+    text-align: center !important;
+    vertical-align: middle;
+    font-weight: 700;
+    font-size: 24px;
+    color: white;
+}
+
+.link-text:hover {
+    color: black;
+}
+
+
+
