--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -6,6 +6,7 @@
 .linux{
     display: flex;
     justify-content: center;
+    padding-top: 2%;
 }
 #vm_container{
     /* background-color: black; */
