--- a/src/components/menubar/menubar.css
+++ b/src/components/menubar/menubar.css
@@ -19,7 +19,7 @@
     width:40%;
     /* padding-top: 1%; */
     /* padding-bottom: 1%; */
-    display: flex;
+    display: none;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
@@ -55,5 +55,45 @@
     color: black;
 }
 
+.dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+  }
+  
+.dropdown:hover .dropdown-content {
+    display: block;
+  }
 
+@media only screen and (min-width: 768px){
+
+    .dropdown {
+        position: relative;
+        display: none;
+      }
+    .links{
+        width:40%;
+        /* padding-top: 1%; */
+        /* padding-bottom: 1%; */
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        
+    
+    
+    }
+    
+}
+  
+ 
 
