--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,6 +1,8 @@
 .Projects{
     height:100%;
     width:100%;
+    display: flex;
+    justify-content: center;
 }
 
 .linux{
@@ -25,4 +27,72 @@
 
 #vm_graphics_mode{
     display: none
+}
+
+.projectCard{
+    width: 80%;
+    border-style: solid;
+    border-width: thin;
+    border-color:rgb(85, 85, 85);
+    font-weight: bold;
+    /* max-height: 25%; */
+    /* margin-left: 2%; */
+    border-radius: 2px;
+    text-align: left;
+    font-size: small;
+}
+
+.ProjectCards{
+    /* height: 100%; */
+    
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-content: space-around;
+    flex-wrap: wrap;
+    color: black;
+
+}
+
+.betterLink{
+    padding-top: 2%;
+    text-decoration: none;
+    width: 75%;
+    display: flex;
+    justify-content: center;
+
+}
+
+
+
+@media only screen and (min-width: 768px){
+
+    .betterLink{
+        text-decoration: none;
+        width: 35%;
+        
+    
+    }
+
+    .projectCard{
+        width: 100%;
+        /* background-image: -webkit-linear-gradient(top, #9c3e78, #6574d6); */
+        border-style: solid;
+        border-width: thin;
+        border-color:rgb(85, 85, 85);
+        font-weight: bold;
+        /* max-height: 25%; */
+        
+        border-radius: 2px;
+        text-align: left;
+        color: black;
+    }
+
+    
+
+    /* .projectVideo{
+        width: 80%;
+    }
+     */
 }
