--- a/src/components/linuxos/linuxos.css
+++ b/src/components/linuxos/linuxos.css
@@ -10,7 +10,7 @@
     justify-content: center;
     padding-top: 2%;
 }
-#vm_container{
+#linux_container{
     
     width: 850.2px;
     height: 420px;
