--- a/src/components/menubar/menubar.css
+++ b/src/components/menubar/menubar.css
@@ -29,6 +29,7 @@
 }
 
 
+
 /* .betterLink{
     text-decoration: none;
     text-align: center !important;
@@ -57,7 +58,10 @@
 
 .dropdown {
     position: relative;
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
   }
   
 .dropdown-content {
@@ -74,7 +78,46 @@
     display: block;
   }
 
+.hamburger{
+    height: 5%
+    
+}
+
 @media only screen and (min-width: 768px){
+
+    .dropdown {
+        position: relative;
+        display: none;
+      }
+    .links{
+        width: 60%;
+        /* padding-top: 1%; */
+        /* padding-bottom: 1%; */
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        
+    
+    
+    }
+    .mobile_links{
+        width:40%;
+        /* padding-top: 1%; */
+        /* padding-bottom: 1%; */
+        display: none;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        
+    
+    
+    }
+    
+    
+}
+
+@media only screen and (min-width: 1024px){
 
     .dropdown {
         position: relative;
