--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -47,20 +47,20 @@
     
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-evenly;
-    align-content: space-around;
-    flex-wrap: wrap;
+    align-items: center;
     color: black;
 
 }
 
-.betterLink{
+.card_link{
     padding-top: 2%;
     text-decoration: none;
     width: 75%;
     display: flex;
     justify-content: center;
+    
 
 }
 
@@ -68,10 +68,23 @@
 
 @media only screen and (min-width: 768px){
 
-    .betterLink{
+    .card_link{
         text-decoration: none;
         width: 35%;
         
+    
+    }
+
+    .ProjectCards{
+        /* height: 100%; */
+        
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-content: space-around;
+        flex-wrap: wrap;
+        color: black;
     
     }
 
